# xcdev

./: Doxyfile  Makefile  Makefile.am  ReadMe.txt  StdAfx.h  abs.cpp  abs.sln  abs.vcproj  configure.in  dbm.cpp  dbutil.cpp  dbutil.h  generator.cpp  generator.h  hash.h  iout.h  iparser.h  object.cpp  object.h  output.cpp  output.h  page.h  parser.h  parser.y  properties.cpp  properties.h  scan.l  test.xcd  testdb.cpp  tool.cpp  tool.h  tree.cpp  tree.h  vcgen.cpp  vcgen.h
XC/: Changes  MANIFEST  Makefile.PL  README  XC.xs
XC-RD/: Changes  Lookup.xs  MANIFEST  Makefile.PL  RD.xs  README  typemap
XC-RD-Lookup/: Changes  Lookup.xs  MANIFEST  Makefile.PL  README  typemap
XC-RD-Lookup/t/: begin.t  lookup.t
XC-RD-Make/: MANIFEST  Make.xs  Makefile.PL  typemap
XC-RD-Make/t/: begin.t  insert.t
XC-RD/debian/: changelog  control  watch
XC-RD/fallback/: const-c.inc  const-xs.inc
XC-RD/t/: XC-RD.t  (+2 more)
cb/: Doxyfile  configure.in
debian/: control
essential/: AUTHORS  configure.ac  list
include/: Makefile.am
lib/: ChangeLog  Doxyfile.in  Makefile.am  README  TODO  configure.in  libxc.pc.in
lib/Win32/: test_file.vcproj  test_symboltable.vcproj  test_tree.vcproj
lib/am/: doxygen.am  gettext.am  test.am
lib/debian/: changelog  control  copyright  index.html  index.txt  libxc-dev.install  libxc-doc.docs  rules
lib/dox/: Makefile.am
lib/include/: Makefile.am
lib/include/xc/: Makefile.am  array.h  assert.h  auto.h  buffer.h  bytecode.h  config.h  data.h  debug.h  dir.h  error.h  fd.h  file.h  fs.h  ipc.h  lex.h  log.h  mutex.h  paths.h  pool.h  refobj.h  regex.h  serialize.h  singleton.h  stdlibs.h  stream.h  string.h  struct.h  system.h  test.h  text.h  time.h  timer.h  types.h  unserialize.h  value.h  version.h.in
lib/include/xc/rd/: Makefile.am  cdb.h
lib/include/xc/system/: Makefile.am  pidfile.h
lib/src/: Makefile.am  bytecode.cc  config.cc  config.cpp  config_ini.cc  config_ini.ll  debug.cc  debug.cpp  debug_sys.cc  error.cc  fd.cc  file.cc  file.cpp  fs.cc  ipc.cc  log.cc  mutex.cc  paths.cc  pool.cc  refobj.cc  regex.cc  serialize.cc  stream.cpp  string.c  symboltable.cpp  system.cc  system_pidfile.cc  test_main.cc  text.cc  timer.cc  tree.cpp  unserialize.cc  uuid.cpp  version.cc
lib/src/resource/: Makefile.am  cdb.cc  db.h  dump.cc  env.cc  lookup.cc  make.cc  make.h  obj.h  out_debug.h  test.cc
lib/test/: Makefile.am  config.cc  file.cpp  gc.cc  serialize.cc  symboltable.cpp  test.conf  text.cc  values.cc
lib/tests/: Makefile.am  config.cc  debug.cc  files.cc  ipc.cc  log.cc  serialize.cc  stream.cpp  system.cc  test.cfg  test.conf  text.cc  timer.cc  values.cc
make/: Makefile  ReadMe.txt  StdAfx.cpp  abs.vcproj  dbm.h  hash.cpp  iout.h  iparser.h  object.cpp  output.cpp  page.cpp  parser.cpp  parser.h  parser.y  scan.l  vcgen.cpp  vcgen.h
php5-cb/: cb.cc  config.m4  php_cb.h  test.php  utils.cc
php5-registry/: cb.cc  config.m4  php_registry.h  registry.cc  test.php  utils.h
php5-xcrd/: config.m4  config.w32  php_xcrd.h  utils.cc  utils.h  xcrd.cc  xcrd.php
php5-xctemplate/: config.m4
profiler/: Makefile.am  bootstrap.sh  configure.in  xcprof-config.in
profiler/Win32/: Profiler.nsi  Profiler.sln  mod_xcprof.vcproj  python_module.vcproj  setup.vcproj  test_mem.vcproj  test_profiler.vcproj  test_udump.vcproj  test_util.vcproj  xcprof.vcproj  xcprofsymbols.vcproj  xcproftool.vcproj
profiler/doc/: Draft.doc
profiler/include/: Makefile.am
profiler/include/xcprof/: addr2line.h  config.h  mem.h  profiler.h  profiler.hpp  times.h  traceback.h  udump.h  util.h
profiler/mod_xcprof/: Makefile.am  httpd-test.conf  mod_xcprof.c
profiler/python/: Makefile.am  module.c  profiler.c  pyutils.h  symboltable.c  test.py
profiler/src/: Makefile.am  addr2line.c  mem.c  profiler.c  times.c  traceback.c  udump.c  util.c
profiler/test/: Makefile.am  mem.cpp  profiler.cpp  udump.cpp  util.cpp
profiler/utils/: Makefile.am  cmdutil.cpp  cmdutil.h  profiler.cpp  symboltable.cpp
registry/: Doxyfile.in  configure.in
registry/debian/: README.source  control
registry/include/xc/: Makefile.am  cb.h  codebase.h  web.h
registry/include/xc/registry/: Makefile.am  cdb.h  lookup.h  php.h
registry/m4/: base.m4
registry/src/: Makefile.am  cb.h  cbc.cc  cbdump.cc  cbmake.cc  cdb.cc  config.cc  constdb.h  env.cc  make.cc  make.h  makecdb.cc  makecdb.h  out_cdb.cc  out_cdb.h  out_debug.cc  pogen.cc  pogen.h  regc.cc  regc.pl  reglookup.cc  xmlparser.cc  xmlparser.h  xmltrans.h  xmlutils.cc
registry/tests/: Makefile.am  compile.cc  po.cc  test.cc
resource/: Makefile.am  configure.in
resource/src/: Makefile.am  StdAfx.h  cbdef.h  cdb.cc  config.cc  env.cc  make.cc  make.h  out_cdb.cc  out_cdb.h  php.cc  regc.pl  regdump.cc  reglookup.cc  test.cc  testcomp.pl  web.cc
resource/tests/: Makefile.am  test.cc  test.cfg  theme.xml
src/: Makefile.am  StdAfx.h  build.cc  cb.cc  cbc.cc  cbdef.h  cbmake.cc  cbmake.h  constdb.cc  constdb.h  db.h  env.cc  make.cc  obj.h  php.cc  pofile.cc  pofile.h  registry.cc  serialize.h  test.cc  test.xml  utils.h  web.cc  xmlparser.cc  xmlparser.h  xmlutils.cc  xmlutils.h
template/: Makefile.am  TODO  configure.in  xctemplate-config.in
template/include/: Makefile.am
template/include/xc/: Makefile.am  template.h
template/include/xc/template/: Makefile.am  bytecode.h  compile.h  db.h  debug.h  dict.h  env.h  error.h  fragment.h  fs.h  output.h  page.h  preprocess.h  scan_html.h  scanner.h  source.h  vm.h
template/src/: Makefile.am  bytecode.cc  bytecode.h  compile.cc  db.cc  debug.cc  env.cc  fragment.cc  fs.cc  output.cc  preprocess.cc  scan_html.ll  template.cc  vm.cc  xct-comp.cc  xct-dump.cc  xct.cc
template/test/: Makefile.am  db.cc  layout.html  layout2.html  main.html  scan-html.cc  vimdoc.html
tests/: Makefile.am
tools/: soap-netcat  xmlrpc-netcat
util/: CMakeLists.txt  header.skl  regex_comp.cpp  regex_config.h  regex_option.cpp  regex_option.h
webcb/: Makefile.am  configure.in
webcb/m4/: debug.m4
webcb/src/: parse_xml.cc  registry.h
xclib/: Makefile.am  configure.in  libxc.pc.in
(+92 files in other folders)
