#        -*- Autoconf -*-
# autoconf requirements and initialization

AC_PREREQ(2.59)
# rm -f config.cache
# initialize autoconf
AC_INIT([xccb], [1.0.0], [milan.dunghubel@gmail.com])

# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(-Wall foreign)

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADER([config.h])

dnl --------------------------------------------------------------------------
dnl Checks for location of programs
dnl --------------------------------------------------------------------------
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl --------------------------------------------------------------------------
dnl Debug/development/test
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for compiler & standard-library characteristics
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for standard headers
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for library configuration (added right-to-left)
dnl --------------------------------------------------------------------------
dnl check for libtotest; if it cannot be found or it's too old, PKG_CHECK_MODULES
dnl macro will automatically print an error message and exit the configure script.
PKG_CHECK_MODULES([CDB], [libcdb])
PKG_CHECK_MODULES([XMLXX], [libxml++-2.6])

dnl --------------------------------------------------------------------------
dnl Checks for library units
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for external-data
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Miscellaneous options that don't need to test system features
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Test features that rely on configure-definitions
dnl --------------------------------------------------------------------------
AC_SUBST(VERSION_INFO)

dnl --------------------------------------------------------------------------
dnl Finally, build config.h and the makefiles
dnl --------------------------------------------------------------------------
AC_CONFIG_FILES([Makefile src/Makefile include/Makefile include/xc/Makefile])
AC_OUTPUT

