
AC_PREREQ(2.50)

# initialize autoconf
AC_INIT([libxc], [0.0.1], [milan@ministryofnet.com])

# install autotools scripts to build-aux dir
AC_CONFIG_AUX_DIR([build-aux])

# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(-Wall foreign)


# tell autoconf where to find sources
AC_CONFIG_SRCDIR([src/file.cpp])
AC_CONFIG_HEADER([config.h])

# check for C++ compiler
AC_PROG_CXX
AM_PROG_LEX

# check for std C headers
AC_HEADER_STDC

# check for libtool
AC_PROG_LIBTOOL

PKG_CHECK_MODULES([LIBCONFIG], [libconfig],, AC_MSG_ERROR([libconfig 1.4 or newer not found.]))

# This version number needs to be changed in several different ways for each
# release. Please read the libtool documentation (info libtool 'Updating
# version info') before touching this. (this is *.so version number).
VERSION_INFO="-version-info 1:0:0"
AC_SUBST(VERSION_INFO)

CPPFLAGS="$CPPFLAGS -DDEBUG=1 -g -fPIC -DXC_THREADSAFE=1"

AC_ARG_ENABLE(optimization,[  --enable-optimization compile optimized without debug logging],[
    case "${enableval}" in
        no)
            AC_MSG_NOTICE([disabling optimization.])
            CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
        ;;
        yes)
            AC_MSG_NOTICE([enabling optimization.])
            CXXEXTRAFLAGS="${CXXEXTRAFLAGS} -O2"
            CPPFLAGS="${CPPFLAGS} -UDEBUG"
        ;;
        *)
            AC_MSG_ERROR([Say yes or no to --enable-optimization.])
        ;;
    esac
], [
   CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
])

CFLAGS="${CFLAGS} -I../include -DXC_THREADSAFE=1"

AC_SUBST(LIBCONFIG_CFLAGS)
AC_SUBST(LIBCONFIG_LIBS)
AC_SUBST(CXXEXTRAFLAGS)

#AC_CONFIG_FILES([xcprof-config], [chmod +x xcprof-config])

# Write config.status and the Makefile
AC_OUTPUT(Makefile src/Makefile tests/Makefile include/Makefile libxc.pc)

