# -*- Autoconf -*-
# $Id$
# 
#   Xross Core Library
#   autoconf requirements and initialization 
#   Milan Dunghubel <milan@ministryofnet.com>
#   Copyright (C) 2010 All Rights Reserved
#

AC_PREREQ(2.50)

# initialize autoconf
AC_INIT([libxc], [1.0.5], [milan.dunghubel@gmail.com])

# install autotools scripts to build-aux dir
AC_CONFIG_AUX_DIR([build-aux])

# initialize automake(use AC_INIT's arguments)
dnl AM_INIT_AUTOMAKE(-Wall foreign)
AM_INIT_AUTOMAKE(-Wall)
AX_AM_MACROS

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADER([config.h])
AH_BOTTOM([#include "i18n.h"])

dnl To regenerate configure and .in files, configure with --enable-maintainer-mode
dnl AM_MAINTAINER_MODE

dnl --------------------------------------------------------------------------
dnl Checks for location of programs
dnl --------------------------------------------------------------------------
AC_LANG_C
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LEX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl AM_GNU_GETTEXT([external])
dnl AM_GNU_GETTEXT_VERSION([0.17])
dnl AM_ICONV

PKG_PROG_PKG_CONFIG

dnl --------------------------------------------------------------------------
dnl Debug/development/test
dnl --------------------------------------------------------------------------
AC_MSG_CHECKING(for --enable-debug)
AC_ARG_ENABLE(debug, AS_HELP_STRING([--enable-debug], [Enable debug features (default: no)]),
[
    AC_MSG_RESULT(yes)
    CXXFLAGS="${CXXFLAGS} -DPIC -fPIC -ggdb -rdynamic"
    CPPFLAGS="${CPPFLAGS} -DDEBUG=1 -D_DEBUG=1"
],
[
    AC_MSG_RESULT(no)
    CXXFLAGS="${CXXFLAGS} -DPIC -fPIC -rdynamic"
    CPPFLAGS="${CPPFLAGS} -UDEBUG -DNDEBUG"
])

AC_MSG_CHECKING(for --enable-optimization)
AC_ARG_ENABLE(optimization, AS_HELP_STRING([--enable-optimization], [Enable optimization features (default: yes)]),
[
    AC_MSG_RESULT(yes)
    AC_MSG_NOTICE([enabling optimization.])
    CXXFLAGS="${CXXFLAGS} -O2"
],
[
    AC_MSG_RESULT(no)
    AC_MSG_NOTICE([disabling optimization.])
    CXXFLAGS="${CXXFLAGS} -O0"
])

dnl CXXFLAGS="${CXXFLAGS} -Werror"
dnl CFLAGS="${CFLAGS} -I../include -DXC_THREADSAFE=1"

dnl --------------------------------------------------------------------------
dnl Checks for compiler & standard-library characteristics
dnl --------------------------------------------------------------------------
AC_HEADER_STAT
AC_C_CONST
AC_HEADER_STDBOOL
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_HEADER([demangle.h])

dnl --------------------------------------------------------------------------
dnl Checks for standard headers
dnl --------------------------------------------------------------------------
# check for std C headers
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
dnl AC_CHECK_HEADERS([arpa/inet.h strings.h])

dnl --------------------------------------------------------------------------
dnl Checks for library configuration (added right-to-left)
dnl --------------------------------------------------------------------------
# libmm
AC_CHECK_LIB(mm,mm_version, , AC_MSG_ERROR([libmm library missing], 1))


PKG_CHECK_MODULES([LIBCONFIG], [libconfig],, AC_MSG_ERROR([libconfig 1.4 or newer not found.]))
AC_SUBST(LIBCONFIG_CFLAGS)
AC_SUBST(LIBCONFIG_LIBS)
AC_SUBST(CXXEXTRAFLAGS)

# pcre 
AX_PATH_LIB_PCRE([
        LDFLAGS="$LDFLAGS $PCRE_LIBS"
        CFLAGS="$CFLAGS $PCRE_CFLAGS"
        CXXFLAGS="$CXXFLAGS $PCRE_CFLAGS"
],AC_MSG_ERROR([Couldn't find pcre library. Make sure your pcre path is correct.]))

# pthread
ACX_PTHREAD([
        LDFLAGS="$LDFLAGS $PTHREAD_LIBS"
        CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
        CXXFLAGS="$CXXFLAGS $PTHREAD_CFLAGS"
	],AC_MSG_ERROR([Couldn't find pthread library. Make sure your pthread path is correct.]))

VL_LIB_READLINE
PKG_CHECK_MODULES([LIBCONFIGXX], [libconfig++ >= 1.3.2],, AC_MSG_ERROR([libconfig++ 1.3.2 or newer not found.]))
PKG_CHECK_MODULES([CDB], [libcdb])

dnl --------------------------------------------------------------------------
dnl Checks for library units
dnl --------------------------------------------------------------------------
# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRERROR_R
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([setrlimit endpwent ftruncate getcwd gethostbyname inet_ntoa localtime_r memmove memset mkdir munmap putenv rmdir socket strcasecmp strchr strcspn strdup strerror strncasecmp strpbrk strrchr strstr strtol tzset])

dnl --------------------------------------------------------------------------
dnl Checks for external-data
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Miscellaneous options that don't need to test system features
dnl --------------------------------------------------------------------------
# Allow the pkg-config directory to be set
AC_ARG_WITH(pkgconfigdir,
    AC_HELP_STRING([--with-pkgconfigdir],
    [Use the specified pkgconfig dir (default is libdir/pkgconfig)]),
    [pkgconfigdir=${withval}],
    [pkgconfigdir='${libdir}/pkgconfig'])
AC_SUBST([pkgconfigdir])
AC_MSG_NOTICE([pkgconfig directory is ${pkgconfigdir}])

# This version number needs to be changed in several different ways for each
# release. Please read the libtool documentation (info libtool 'Updating
# version info') before touching this. (this is *.so version number).
VERSION_INFO="-version-info 1:0:0"
AC_SUBST(VERSION_INFO)

dnl --------------------------------------------------------------------------
dnl Test features that rely on configure-definitions
dnl --------------------------------------------------------------------------
AC_SUBST([VA_ARGS_DECL], [...])
AC_SUBST([VA_ARGS], [])

dnl --------------------------------------------------------------------------
dnl Finally, build config.h and the makefiles
dnl --------------------------------------------------------------------------
SVN_VERSION=`svnversion .`
AC_SUBST([SVN_VERSION])
AC_DEFINE_UNQUOTED([SVN_VERSION], "$SVN_VERSION", [Actual svn version.])

#AC_CONFIG_FILES([xcprof-config], [chmod +x xcprof-config])
AC_CONFIG_FILES([Makefile include/Makefile])
AC_CONFIG_FILES([include/xc/Makefile include/xc/system/Makefile include/xc/rd/Makefile])
AC_CONFIG_FILES([src/Makefile tests/Makefile])
AC_CONFIG_FILES([src/resource/Makefile])
AC_CONFIG_FILES([include/xc/version.h libxc.pc Doxyfile])
# Write config.status and the Makefile
AC_OUTPUT

echo "
        Xross Core Library v${VERSION} has been configured as follows:
        
        Platform:  $PRINTABLE_OS_NAME ($host)

        OpenPGP:   $build_gpg
        S/MIME:    $build_gpgsm
        Agent:     $build_agent $build_agent_threaded
        Smartcard: $build_scdaemon $build_scdaemon_extra

        Includedir: $includedir
        Libdir: $libdir
        Localedir: $localedir

        Protect tool:      $show_gnupg_protect_tool_pgm
        Default agent:     $show_gnupg_agent_pgm
        Default dirmngr:   $show_gnupg_dirmngr_pgm

        CFLAGS: $CFLAGS $CXXFLAGS
        LDFLAGS: $LDFLAGS

        PKITS based tests: $run_pkits_tests
"

echo $ECHO_N "And the winner is... $ECHO_C"
echo "${ECHO_T}dead."

