#        -*- Autoconf -*-
# autoconf requirements and initialization

AC_PREREQ(2.59)
# rm -f config.cache
# initialize autoconf
AC_INIT([libxcregistry], [1.0.0], [milan.dunghubel@gmail.com])

# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(-Wall foreign)

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADER([config.h])

dnl --------------------------------------------------------------------------
dnl Checks for location of programs
dnl --------------------------------------------------------------------------
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl --------------------------------------------------------------------------
dnl Debug/development/test
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for compiler & standard-library characteristics
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for standard headers
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for library configuration (added right-to-left)
dnl --------------------------------------------------------------------------
dnl check for libtotest; if it cannot be found or it's too old, PKG_CHECK_MODULES
dnl macro will automatically print an error message and exit the configure script.
PKG_CHECK_MODULES([XC], [libxc])
PKG_CHECK_MODULES([LIBCONFIGXX], [libconfig++ >= 1.3.2],, AC_MSG_ERROR([libconfig++ 1.3.2 or newer not found.]))
PKG_CHECK_MODULES([CDB], [libcdb])
PKG_CHECK_MODULES([XMLXX], [libxml++-2.6])

dnl --------------------------------------------------------------------------
dnl Checks for library units
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Checks for external-data
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Miscellaneous options that don't need to test system features
dnl --------------------------------------------------------------------------

dnl --------------------------------------------------------------------------
dnl Test features that rely on configure-definitions
dnl --------------------------------------------------------------------------
AC_SUBST(VERSION_INFO)

dnl --------------------------------------------------------------------------
dnl Doxygen
dnl --------------------------------------------------------------------------
dnl DX_DOXYGEN_FEATURE(ON|OFF)
dnl DX_DOT_FEATURE(OFF)
DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN([libxcregistry], [Doxyfile], [doc])

dnl --------------------------------------------------------------------------
dnl Finally, build config.h and the makefiles
dnl --------------------------------------------------------------------------
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_FILES([include/Makefile include/xc/Makefile include/xc/registry/Makefile])
AC_CONFIG_FILES([tests/Makefile Doxyfile])
AC_OUTPUT

